# manim_presentations

./: .gitignore  README.md  config.py  pyproject.toml
evoc_tmls/: README.md  base_data.npy  benchmarks.py  data_manifest.py  density_and_barcodes.py  embedding_cartoon_edges.csv  embedding_cartoon_raw_data.npy  evoc_logo_colors.npy  extra_scenes.py  falling_icon_simulation.py  pyproject.toml  scene_order.txt  slides.py  staggered_deluge_rotations.json  staggered_deluge_rotations_1.json
evoc_tmls/data/benchmarks/: bird_ari_EVoC_swarm.npy  bird_ari_kmeans_swarm.npy  bird_ari_umap_hdbscan_swarm.npy  bird_ari_ylim.npy  bird_ari_yticks.npy  bird_cs_EVoC_swarm.npy  bird_cs_kmeans_swarm.npy  bird_cs_umap_hdbscan_swarm.npy  bird_cs_ylim.npy  bird_cs_yticks.npy  bird_time_EVoC_swarm.npy  bird_time_kmeans_swarm.npy  bird_time_umap_hdbscan_swarm.npy  bird_time_ylim.npy  bird_time_yticks.npy  cifar_ari_EVoC_swarm.npy  cifar_ari_kmeans_swarm.npy  cifar_ari_umap_hdbscan_swarm.npy  cifar_ari_ylim.npy  cifar_ari_yticks.npy  cifar_cs_EVoC_swarm.npy  cifar_cs_kmeans_swarm.npy  cifar_cs_umap_hdbscan_swarm.npy  cifar_cs_ylim.npy  cifar_cs_yticks.npy  cifar_time_EVoC_swarm.npy  cifar_time_kmeans_swarm.npy  cifar_time_umap_hdbscan_swarm.npy  cifar_time_ylim.npy  cifar_time_yticks.npy  mnist_ari_EVoC_swarm.npy  mnist_ari_kmeans_swarm.npy  mnist_ari_umap_hdbscan_swarm.npy  (+27 more)
hdtda/: data_generation.py  effective_resistance.py  high_dimensions.py  layout_optimization_animations.py  lissajous_knots.py  manim.cfg  numap_animation_generation.py  persistent_homology.py  pyproject.toml  slides.py
(+11 files in other folders)
